--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ timezone: Europe/Berlin
 title: Docu Wizard # the main title
 
 # tagline: Documentation for the Homelab # it will display as the sub-title
-tagline: Documentation of the homelab technology
+tagline: Documentation of the technology used in my home lab
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
